# jax-mps

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEV_BUILD_GUIDE.md  README.md  conftest.py  pyproject.toml  pytest.ini  test_float64.py
.claude/commands/: update-test-badge.md
.github/workflows/: awaiting-info.yml  build.yml
benchmarks/: bench_body_cpp.cc  bench_body_only.py  bench_constant_placement.cc  bench_graph_dump.cc  bench_graph_size.cc  bench_graph_trace.cc  bench_jax_mps.py  bench_jaxmps_replica.cc  bench_large_loop_error.py  bench_mlir_replica.cc  bench_per_step.cc  bench_replay.py  bench_rnn_comparison.py  bench_rnn_sizes.py  bench_rnn_training.py  bench_scaling.py  bench_tape_curve.cc  bench_weight_sharing.cc  bench_while_loop.cc  main_results.json  main_training.json  post_revert_training.json  pr_results.json  pr_results_v2.json  pr_training.json  pr_training_v2.json  quick_test.py  run_audit_bench.py  test_compile.cc  trace_diag.py
examples/distilbert/: README.md  main.py  model.py
examples/gemma/: README.md  benchmark.py  main.py  model.py
examples/gemma3/: main.py  model.py
examples/resnet/: README.md  main.py
scripts/: setup_deps.sh  setup_deps_common.sh  setup_deps_llvm.sh  setup_deps_mlx.sh  setup_deps_protobuf.sh
src/jax_plugins/mps/: __init__.py  ops.py
src/pjrt_plugin/: mlx_buffer.cc  mlx_buffer.h  mlx_buffer.mm  mlx_client.cc  mlx_client.h  mlx_client.mm  mlx_device.h  mlx_device.mm  mlx_executable.cc  mlx_executable.h  mlx_executable.mm  pjrt_api.cc  pjrt_buffer.cc  pjrt_executable.cc  pjrt_mutex.h  pjrt_types.h  stablehlo_parser.cc  stablehlo_parser.mm  type_utils.cc  type_utils.h
src/pjrt_plugin/ops/: arithmetic.cc  control_flow.cc  control_flow_ops.mm  gather_scatter.cc  handler_utils.h  linalg.cc  reduction.cc  registry.h  shape.cc  shape_ops.mm  slice.cc  sort_fft_complex.cc
tests/: conftest.py  test_ops.py
tests/configs/: __init__.py  benchmark.py  control_flow.py  conv.py  flax.py  fused.py  linalg.py  matmul.py  misc.py  numpyro.py  reduction.py  shape.py  slice.py  unary.py
