[project]
name = "jax-mps"
version = "0.9.11"
description = "JAX backend for Apple Metal Performance Shaders (MPS)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "jax>=0.9.0,<0.10",
    "jaxlib>=0.9.0,<0.10",
]
keywords = ["jax", "metal", "mps", "apple", "gpu", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tillahoffmann/jax-mps"
Repository = "https://github.com/tillahoffmann/jax-mps"

[project.entry-points."jax_plugins"]
mps = "jax_plugins.mps"

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Build directory
build-dir = "build/{wheel_tag}"

# CMake configuration
cmake.build-type = "Release"
build.verbose = true

# Install the built library to the package
wheel.packages = ["src/jax_plugins"]
wheel.install-dir = "jax_plugins/mps"

[tool.cibuildwheel]
build = ["cp311-macosx_arm64", "cp312-macosx_arm64", "cp313-macosx_arm64"]
environment = { CMAKE_PREFIX_PATH = "$HOME/.local/jax-mps-deps" }
before-all = "./scripts/setup_deps.sh"

[tool.uv.sources]
ctcache = { git = "https://github.com/matus-chochlik/ctcache.git" }

[dependency-groups]
dev = [
    "ctcache",
    "flax>=0.10.7",
    "huggingface-hub",
    "mlx-lm>=0.31.1",
    "numpyro>=0.20.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest",
    "pytest-benchmark>=5.2.3",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.14.13",
    "safetensors",
    "sentencepiece",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
]
